# OsintNeoAi

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_INSTRUCTIONS.md  AUDIT_NUMBERS.csv  AUDIT_NUMBERS_v2_scan_july24.csv  DEHASHED_HBPD_SCAN_REPORT.md  DEPLOYMENT_GUIDE.md  Dockerfile  EVIDENCE_MATRIX.md  FORENSIC_AUDIT_REPORT.md  HBPD_PORT_SCAN_REPORT.md  OSINT911Ai  OSINT_BIGQUERY_INGESTION_WALKTHROUGH_AND_PATHS.md  OSINT_Civil_Rights_Integration_Guide.md  PETRUCCIO_MEDICAL_SUMMARY.md  PUBLIC_RECON_AUDIT.html  README.md  Start-CloudflareTunnel.ps1  aegis_correlation_engine.py  ag2_config.py  alerts_flagged.json  anomaly_alerts.py  antigravity_resurrection.py  auto_chunk_worker.py  batch_takeout_processor.py  bookmarks_investigation_findings.md  briefings_data.js  business_workbook.xlsx  business_workbook_engine.py  capabilities_dashboard.html  chokepoint_extraction_report.md  chrome_bookmarks_dump.json  chunk_progress_tracker.json  clock.html  cloudbuild.yaml  cloudflare-tunnel.sh  consolidate_evidence.py  create_zip.py  (+71 more)
.agents/: AGENTS.md
.github/: dependabot.yml
AG2OSINTNEOMAXX/: .gitignore  index.html
FEDERAL_SUBMISSION/: artifacts_log.csv
OSINTNeoAI-Core/: requirements.txt
OsintNeoAi.Package/: OsintNeoAi.csproj  OsintNeoAiRunner.cs
agent/: AG_SYSTEM_INDEX.md  Antigravity_Resurrection_Protocol_makavali.md  CLIENT_CREDENTIALS.md  MASTER_TARGET_NAMES.csv  NATIONWIDE_INDIVIDUAL_TARGETS.csv  _check_count.py  _check_indexes.py  _check_mime.py  _clean_csv.py  _count_extractable.py  _dedup_drive.py  _dedup_drive_v2.py  _download_drive_content.py  _download_test.py  _export_all_indexes.py  _export_all_indexes_v2.py  _export_all_indexes_v3.py  _export_drive_index.py  _export_other_indexes.py  _extract_text_content.py  _extract_text_parallel.py  _fix_bq_expiration.py  analyze_regional_holes.py  analyze_rico_local.py  analyze_sheriff_coc_overlap.py  antigravity_core_context.md  auth_helper.py  banner_grabber.py  bulk_city_ip_scanner.py  ca_44_coc_matrix.csv  ca_coc_data_gaps.csv  ca_statewide_fraud_matrix.csv  calculate_ca_auditor_gap.py  check_audit.py  check_ca_cocs.py  check_cocs.py  check_db.py  check_hud_data.py  city_ip_geolocation.py  city_ip_geolocation_v2.py  (+86 more)
api/: main.py
archive/OsintNeoAiReplit/Osint-neo-ai/: .replit  OSINT_Intelligence_Report.xlsx  main.py  phone_scanner.py  pyproject.toml  replit.md  termux_instructions.html  termux_setup.sh
archive/OsintNeoAiReplit/Osint-neo-ai/.agents/memory/: MEMORY.md
archive/OsintNeoAiReplit/Osint-neo-ai/.streamlit/: config.toml
archive/OsintNeoAiReplit/Osint-neo-ai/attached_assets/: OSINT_Master_1774568907797.xlsx  README_1780155516384.md  ai_studio_code_1774563554371.html  generate_maltego_1780155516380.py  install_1780155516383.sh  master_index_1774568915769.json  master_index_1774570572829.json  master_index_1774570838304.json  master_index_1774579050784.json  master_index_1774579310091.json  master_index_1774580237079.json  master_index_1774591707582.json  retro-osint_1780155516384
archive/OsintNeoAiReplit/Osint-neo-ai/components/folder_picker/: __init__.py  folder_picker.py
archive/OsintNeoAiReplit/Osint-neo-ai/components/folder_picker/frontend/: index.html
archive/OsintNeoAiReplit/Osint-neo-ai/data/: OSINT_Master_Sheet.xlsx  osint_master.db
archive/OsintNeoAiReplit/Osint-neo-ai/data/OSINT_Neo/: OSINT_Master.xlsx  master_index.json
archive/OsintNeoAiReplit/Osint-neo-ai/pages/: ai_assistant.py  dashboard.py  deep_dive.py  file_scanner_page.py  live_feed.py  master_sheet.py  network_graph.py  nlp_analysis.py  nonprofit.py  real_estate.py  report_gen.py  search.py  social_media.py  target_enum.py  threat_score.py
archive/OsintNeoAiReplit/Osint-neo-ai/scripts/: post-merge.sh
archive/OsintNeoAiReplit/Osint-neo-ai/utils/: api_clients.py  config.py  database.py  excel_gen.py  file_scanner.py  maltego_export.py  report_builder.py  threat_scorer.py
backup-scripts/: backup-all-accounts.sh  backup-cloudshell.sh  deploy-workstation.sh  drive_forensics_pipeline.py
cli/: api.py  (+6 more)
osint-indep/: .gitignore  DISASTER_RECOVERY.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
osint-indep/config/: default.yaml  development.yaml  production.yaml
osint-indep/docs/: BACKUP_SETUP.md
osint-indep/scripts/: create-cold-backup.sh  daily-sync.sh  download-assets.sh  health_check.py  sync-all.sh  sync-to-gdrive.sh  sync-to-local.ps1  verify-assets.sh  verify-backups.sh
osint-indep/src/: __init__.py
osint-indep/src/api/: __init__.py  routes.py
osint-indep/src/collectors/: __init__.py  api.py  base.py  dns.py  social.py  web.py
osint-indep/src/core/: __init__.py  config.py  database.py  models.py
osint-indep/tests/: __init__.py  test_core.py
osint-indep/web/: Dockerfile  nginx.conf  package.json
(+348 files in other folders)
