[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osint-indep"
version = "1.0.0"
description = "Standalone OSINT Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "OSINT Independent", email = "ops@osint-indep.local"}
]
keywords = ["osint", "intelligence", "threat-intel", "reconnaissance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "aiohttp>=3.9.1",
    "httpx>=0.26.0",
    "requests>=2.31.0",
    "tenacity>=8.2.3",
    "dnspython>=2.4.2",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "cssselect>=1.2.0",
    "cryptography>=41.0.7",
    "pyjwt>=2.8.0",
    "passlib>=1.7.4",
    "bcrypt>=4.1.2",
    "click>=8.1.7",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "pandas>=2.1.4",
    "numpy>=1.26.2",
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.1",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.12",
    "black>=23.11.0",
    "isort>=5.12.0",
    "ruff>=0.1.13",
    "pre-commit>=3.6.0",
]
ml = [
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.2",
    "scikit-learn>=1.3.2",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.14",
]

[project.urls]
Homepage = "https://github.com/Tonypost949/OsintNeoAi"
Repository = "https://github.com/Tonypost949/OsintNeoAi"
Issues = "https://github.com/Tonypost949/OsintNeoAi/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
implicit_reexport = true

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "T20", # flake8-print
]
ignore = ["E501"]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.commitizen]
version = "1.0.0"
version_files = ["pyproject.toml"]
tag_format = "v$version"

[tool.pre-commit]
hooks = [
    {id = "trailing-whitespace"},
    {id = "end-of-file-fixer"},
    {id = "check-yaml"},
    {id = "check-added-large-files"},
    {id = "check-merge-conflict"},
    {id = "debug-statements"},
    {id = "check-json"},
    {id = "black"},
    {id = "isort"},
    {id = "mypy"},
    {id = "ruff"},
]