[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "mutagen>=1.47.0",
    "openai>=2.38.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "plotly>=6.5.2",
    "python-whois>=0.9.6",
    "reportlab>=4.5.1",
    "requests>=2.34.0",
    "spacy>=3.8.11",
    "streamlit>=1.54.0",
    "streamlit-folium>=0.26.1",
    "xlsxwriter>=3.2.9",
]
